Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/DefiniteAssignment/DASwitch.out
DASwitch.java:22:32: compiler.err.var.might.not.have.been.initialized: b
1 error
